--- a/index.html
+++ b/index.html
@@ -4,9 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing-Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    
+    <div class="section-1">
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <div class="links">
+                <ul >
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link two</a></li>
+                    <li><a href="">header link three</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="container">
+            <div class="content">
+                <div class="hero-main">This website is awesome</div>
+                <div class="hero-secondary">This website has some subtext that goes here under the main title.
+                    It's smaller font and the color is lower contrast.
+                </div>
+                <button>Sign up</button>
+            </div>
+            <div class="image">
+                <img src="images/pexels-martin-wischeropp-18608160.jpg" alt="this is a place holder for an image" class="image1">
+            </div>
+        </div>
+    </div>
+    <div class="section-2">
+        <div class="info-header">Some random information.</div>
+        <div class="container-2">
+            <div>
+                <img src="images/pexels-martin-wischeropp-18608160.jpg" alt="image-1" class="image-1">
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div>
+                <img src="images/pexels-martin-wischeropp-18608160.jpg" alt="image-2" class="image-2">
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div>
+                <img src="images/pexels-martin-wischeropp-18608160.jpg" alt="image-3" class="image-3">
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div>
+                <img src="images/pexels-martin-wischeropp-18608160.jpg" alt="image-4" class="image-4">
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
+    <div class="section-3">
+        <div class="quote">
+            This is an inspiring quote, or a 
+            testimonial from a customer. Maybe it's just filling 
+            up space, or maybe people will actually read it. Who 
+            knows? All I know is that it looks nice.
+        </div>
+        <div class="author">-Thor, God of Thunder</div>
+
+    </div>
+    <div class="section-4">
+        <div class="blue-box">
+            <div class="text">
+                <div class="text-1">Call to action! It's time!</div>
+                <div class="text-2">Sign up for our product by clicking that button right 
+                    over there!</div>
+            </div>
+            <div class="button-1">
+                <button class="button-2">Sign up</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div>Copyright © The Odin Project 2021</div>
+    </div>
+
+
 </body>
 </html>
